# findpapers

./: .coverage.macbook_local.pid9676.Xkx6ZNwx.HNQIp837rWOh  .env.sample  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REFACTORING_PLAN.md  poetry.toml  pyproject.toml  query-build-plan.md  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  labels-config.yml  labels.yml  pr_labeler-config.yml  release-drafter-config.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql-analysis.yml  labeler.yml  labels_sync.yml  lint.yml  pr_checks.yml  pr_labeler.yml  publish.yml  release-drafter.yml  test.yml
findpapers/: __init__.py  _filter.py  _runner.py  _show_duplications.py  acm_paper_page_scrapper.py  acm_scrapper.py  arxiv_scrapper.py  cli.py  exceptions.py  get.py  scrapper.py  search_handler.py  util.py
findpapers/model/: paper.py
findpapers/models/: __init__.py  bibliometrics.py  paper.py  publication.py  query.py  search.py  search_result.py
findpapers/runners/: __init__.py  download_runner.py  enrichment_runner.py  search_runner.py
findpapers/scrapper/: scopus_paper_page_scrapper.py  scopus_publication_scrapper.py  scopus_scrapper.py
findpapers/searcher/: __init__.py  acm_searcher.py  arxiv_searcher.py  ieee_searcher.py  pubmed_searcher.py  scopus_searcher.py
findpapers/searchers/: __init__.py  acm_searcher.py  arxiv.py  arxiv_searcher.py  base.py  biorxiv.py  biorxiv_searcher.py  database.py  ieee.py  ieee_searcher.py  medrxiv.py  medrxiv_searcher.py  pubmed.py  pubmed_searcher.py  rxiv.py  rxiv_searcher.py  scopus.py  scopus_searcher.py
findpapers/tools/: bibtex_generator_tool.py  downloader_tool.py  refiner_tool.py  search_runner_tool.py
findpapers/utils/: __init__.py  common_util.py  download_util.py  enrichment_util.py  merge_util.py  outputfile_util.py  parallel_util.py  persistence_util.py  predatory_data.py  predatory_util.py  publication_util.py  query_util.py  refine_util.py  requests_util.py  run_util.py  search_export_util.py  search_util.py  version_util.py
findpapers_old/models/: publication.py  search.py
findpapers_old/searchers/: arxiv_searcher.py  biorxiv_searcher.py  pubmed_searcher.py
findpapers_old/utils/: persistence_util.py  publication_util.py
samples/: charts.py  research.py  search_paul.json  search_paul.py  some_research.py  some_search.py
tests/: __init__.py  conftest.py  test_models.py  test_util.py
tests/data/: README.md  acm-paper-metadata.json  acm-paper-page.html  acm-search-page.html  arxiv-api-search.xml  collect_all_samples.py  ieee-api-search.json  pubmed-api-paper.xml  pubmed-api-search.xml  scopus-api-publication.xml  scopus-api-search.json  scopus-api-search.xml
tests/data/arxiv/: collect_sample.py  collection_metadata.json  sample_response.xml
tests/data/biorxiv/: api_responses.json  collect_sample.py  collection_metadata.json  sample_response.json  search_page_sample.html  search_results.json
tests/data/ieee/: collect_sample.py  collection_metadata.json  sample_response.json
tests/data/medrxiv/: api_responses.json  collect_sample.py  collection_metadata.json  sample_response.json  search_page_sample.html  search_results.json
tests/data/openalex/: collect_sample.py  collection_metadata.json  sample_response.json
tests/data/pubmed/: collect_sample.py  collection_metadata.json  efetch_response.xml  esearch_response.json
tests/data/scopus/: collect_sample.py  collection_metadata.json  sample_response.json
tests/data/semanticscholar/: bulk_search_response.json  collect_sample.py  collection_metadata.json  relevance_search_response.json
tests/mocks/: mocks_acm.py  mocks_arxiv.py  mocks_ieee.py  mocks_pubmed.py  mocks_scopus.py
tests/unit/: conftest.py  test_acm_searcher.py  test_arxiv_searcher.py  test_bibtex_generator.py  test_common_util.py  test_download_runner.py  test_enrichment_util.py  test_get.py  test_ieee_searcher.py  test_merge_util.py  test_models.py  test_predatory_util.py  test_pubmed_searcher.py  test_query.py  test_query_util.py  test_runners_metrics_logging.py  test_rxiv_searcher.py  test_scopus_scrapper.py  test_scopus_searcher.py  test_search_handler.py  test_search_refine.py  test_search_runner_databases.py  test_search_runner_enrich.py  test_search_runner_exceptions.py  test_search_runner_exports.py  test_search_runner_fetch.py  test_search_runner_filter_dedupe.py  test_search_runner_internal_utils.py  test_search_runner_predatory.py  test_search_runner_run_state.py  test_stage0.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py  test_util.py
tests_old/data/: ieee-api-search.json  pubmed-api-search.xml  scopus-api-publication.json  scopus-api-search.json  scopus-paper-page.html
tests_old/unit/: test_arxiv_searcher.py  test_common_util.py  test_ieee_searcher.py  test_rxiv_searcher.py
typings/pytest/: __init__.pyi
