[tool.poetry]
name = "Findpapers"
version = "0.6.8"
description = "Findpapers is an application that helps researchers who are looking for references for their work."
authors = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
maintainers = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jonatasgrosman/findpapers"
repository = "https://github.com/jonatasgrosman/findpapers"
documentation = "https://github.com/jonatasgrosman/findpapers"
keywords = ["academic", "academic publications", "academic publishing", "acm", "arxiv", "bibtex", "biorxiv", "collect papers", "crawler", "ieee", "medrxiv", "paper", "papers", "pubmed", "research", "scientific papers", "scientific publications", "scientific publishing", "scopus", "scraper", "systematic mapping", "systematic review"]

[tool.poetry.scripts]
findpapers = "findpapers.cli:main"

[tool.poetry.dependencies]
python = "^3.13"
lxml = "^6.0.0"
requests = "^2.32.4"
inquirer = "^3.4.0"
edlib = "^1.3.9.post1"
xmltodict = "^0.14.2"
typer = "^0.16.0"
termcolor = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-randomly = "^3.16.0"
Sphinx = "^8.2.3"
coverage = {version = "^7.9.2", extras = ["toml"]}

[tool.poetry.urls]
issues = "https://github.com/jonatasgrosman/findpapers/issues"

[tool.pytest.ini_options]
junit_family = "xunit2"
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.coverage.run]
source = ['.']
omit = [
    "findpapers/models/__init__.py",
    "findpapers/searcher/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

