[tool.poetry]
name = "Findpapers"
version = "0.6.7"
description = "Findpapers is an application that helps researchers who are looking for references for their work."
authors = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
maintainers = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jonatasgrosman/findpapers"
repository = "https://github.com/jonatasgrosman/findpapers"
documentation = "https://github.com/jonatasgrosman/findpapers"
keywords = ["academic", "academic publications", "academic publishing", "arxiv", "bibtex", "biorxiv", "collect papers", "crawler", "ieee", "medrxiv", "paper", "papers", "pubmed", "research", "scientific papers", "scientific publications", "scientific publishing", "scopus", "scraper", "systematic mapping", "systematic review"]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.5.2"
requests = "^2.24.0"
edlib = "^1.3.8"
xmltodict = "^0.12.0"
importlib-metadata = {version = "^1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-randomly = "^4.0.1"
Sphinx = "^3.2.1"
coverage = {version = "^7.4.4", extras = ["toml"]}

[tool.poetry.urls]
issues = "https://github.com/jonatasgrosman/findpapers/issues"

[tool.pytest.ini_options]
junit_family = "xunit2"
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.coverage.run]
source = ['.']
omit = [
    "findpapers/models/__init__.py",
    "findpapers/searcher/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

