[tool.poetry]
name = "Findpapers"
version = "0.6.7"
description = "Findpapers is an application that helps researchers who are looking for references for their work."
authors = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
maintainers = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jonatasgrosman/findpapers"
repository = "https://github.com/jonatasgrosman/findpapers"
documentation = "https://github.com/jonatasgrosman/findpapers"
keywords = ["academic", "academic publications", "academic publishing", "arxiv", "bibtex", "biorxiv", "collect papers", "crawler", "ieee", "medrxiv", "paper", "papers", "pubmed", "research", "scientific papers", "scientific publications", "scientific publishing", "scopus", "scraper", "systematic mapping", "systematic review"]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.5.2"
requests = "^2.24.0"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"
coverage = {version = "^7.4.4", extras = ["toml"]}
types-requests = "^2.31.0"
lxml-stubs = "^0.4.0"
types-tqdm = "^4.66.0"
ruff = "^0.14.14"
mypy = "^1.19.1"
isort = "^7.0.0"
black = "^26.1.0"

[tool.poetry.urls]
issues = "https://github.com/jonatasgrosman/findpapers/issues"

[tool.pytest.ini_options]
junit_family = "xunit2"
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.coverage.run]
source = ['.']
omit = [
    "findpapers/models/__init__.py",
    "findpapers/searcher/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

